[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/LilitaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/240px-Circle_-_black_simple.svg.png" type="Texture" id=2]
[ext_resource path="res://UI/Inventory.gd" type="Script" id=3]
[ext_resource path="res://Player/tools.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_color = Color( 0.0117647, 0.00392157, 0.00392157, 0.6 )
shadow_size = 2

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
outline_color = Color( 0.0588235, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 1 )

[node name="Inventory" type="Node2D"]
script = ExtResource( 3 )

[node name="TitleCard" type="Panel" parent="."]
margin_left = -58.0
margin_top = -64.0
margin_right = 56.0
margin_bottom = -27.0
custom_styles/panel = SubResource( 1 )

[node name="ItemName" type="Label" parent="TitleCard"]
margin_left = 4.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Background" type="Panel" parent="."]
margin_left = -94.0
margin_top = -43.0
margin_right = 97.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 3 )

[node name="InventoryBoxPlacer" type="Node2D" parent="."]
position = Vector2( -81, -27 )

[node name="InventoryIconContainer" type="Node2D" parent="."]
position = Vector2( -81, -27 )

[node name="OtherItems" type="Node2D" parent="."]

[node name="240Px-Circle-BlackSimplesvg2" type="Sprite" parent="OtherItems"]
position = Vector2( -48, 26 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="240Px-Circle-BlackSimplesvg" type="Sprite" parent="OtherItems"]
position = Vector2( 52, 26 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Tools" type="Sprite" parent="OtherItems"]
position = Vector2( -48, 20 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
hframes = 6
frame = 4

[node name="Tools2" type="Sprite" parent="OtherItems"]
position = Vector2( 53, 19 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
hframes = 6
frame = 5

[node name="FishBaitCounter" type="Label" parent="OtherItems"]
margin_left = -68.0
margin_top = 27.0
margin_right = -28.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "1
"
align = 1

[node name="FlowerCounter" type="Label" parent="OtherItems"]
margin_left = 33.0
margin_top = 27.0
margin_right = 73.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "1
"
align = 1
